--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.
         <p class="price"> Starting at $2.00 / frame.</p></p>
 
+      <h2 class="blue">Paint</h2>
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/finnish.jpeg">
+        <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.
+           Starting at $5.00 / tube.</p>
+
   </body>
 </html>
